first version body component

--- a/src/app/body/body.component.html
+++ b/src/app/body/body.component.html
@@ -1,3 +1,94 @@
-<p>
-  body works!
-</p>
+<div class="container">
+  <p>
+    <img class="img-responsive" src="/assets/img/ngLabs.jpg">
+  </p>
+  <p>
+    ¿Quieres aprender a programar en Angular de verdad? Nada mejor que juntarte con 
+    otros desarrolladores y pegarte con el lenguaje creando proyectos propuestos por ti o 
+    por otros miembros del grupo.
+  </p>
+  
+  <p>
+      Para esto existe <a href="https://www.meetup.com/es-ES/Angular_Madrid/events/243167545/">ngLabs</a>, un grupo de Meetup donde no solo damos charlas sino que también 
+      pasamos a la práctica.
+  </p>
+  
+  <p>
+    Nos reunimos los <strong>viernes por la tarde y sábados por la mañana </strong>durante 4 horas en las 
+    instalaciones que Liferay nos facilita de forma gratuita para profundizar en el aprendizaje
+    del ecosistema que rodea a Angular, ya hemos hecho workshops sobre testing, observables,
+    Kanban… y tenemos preparados un montón de workshops más para esta nueva temporada que 
+    acaba de empezar.
+  </p>
+  
+    <p>
+    Si quieres formar parte de esta Comunidad o grupo de Meetup te aconsejo que te apuntes a nuestro 
+    canal de <a href="http://nglabs-madrid.slack.com">Slack</a> y te pases por una de nuestras reuniones o workshops. 
+    Los miembros de esta 
+    Comunidad (los que están dentro del canal de Slack) tienen derecho a la camiseta del grupo 
+    patrocinada por <a href="https://www.autentia.com">Autentia</a>, hasta agotar existencias de la primera tirada, en azul y una 
+    suscripción gratuita a la guía práctica de Angular, escrita por uno de nuestros miembros, 
+    <strong>Rubén Aguilera</strong>, y que puedes encontrar <a href="https://leanpub.com/angular-guia-practica">aquí.</a>. Solo tienes que pedirla a 
+    través del canal de Slack 
+    a raguilera82 (ngPhantom).
+  </p>
+  <p>
+    <img class="img-responsive" src="/assets/img/KANBAN-IN-NGLABS.jpg" >
+  </p>
+  <p>
+    Como novedad para esta temporada se han propuesto los <strong>ngSherpas</strong>, que no es más que personas de 
+    esta Comunidad que se ofrecen a ayudar en todo lo que puedan a los demás miembros (los podrás 
+    identificar porque su camiseta es negra), teniendo en cuenta que hasta el más experto de los 
+    ngSherpas puede aprender del más novel miembro de la Comunidad, y viceversa.
+  </p> 
+  <p> 
+    Estos son los ngSherpas con los que podrás contar y el apodo que recibieron el día de la 
+    ceremonia:
+  </p>
+  <p>
+    – <strong>Adrián Ferreres (Bicho-Da-Seda)</strong>: es el fundador y precursor de la idea, 
+    recientemente se ha mudado a Munich por lo que estará con nosotros de forma remota, y el resto 
+    intentaremos continuar con su legado. Lleva el proyecto de innovación y le puedes preguntar lo 
+    que quieras. Ya nos ha dicho que está a punto de fundar ngLabs Munich, lo que nos dará más 
+    visibilidad internacional.
+    <br> 
+    – <strong>Rubén Aguilera (ngPhantom)</strong>: ponente habitual en los grupos de Meetup tanto de 
+    charlas como workshops. Nos ha dicho que tiene muchas cosas preparadas para este nuevo curso. 
+    Nos ofrece su guía práctica de forma gratuita a los miembros del grupo, así que si no encuentras 
+    la respuesta en la guía, díselo y en la siguiente actualización la tendrás. El apodo es porque 
+    estará más en remoto que físicamente en las reuniones.
+    <br> 
+    – <strong>Santiago Peláez (Reverendo)</strong>: es nuestro reverendo luterano (y no es coña), en 
+    la última reunión nos ofreció un sermón genial sobre cómo aplicar Kanban a nuestros proyectos y 
+    es el ngSherpa más cercano a los miembros más noveles del grupo.
+    <br> 
+    – <strong>Alfredo de la Calle (Bytelovers)</strong>: otro de los miembros más visibles del grupo,
+      si los sábados no le ves, no podrás entrar en las oficinas de Liferay.
+      <br> 
+      – <strong>José Manuel Garcia (IoT)</strong>: es nuestro ngSherpa especializado en la aplicación 
+      de Angular para el “Internet de las cosas”, así que es vuestro referente si queréis hacer un 
+      proyecto que incluya esta tecnología.
+      <br> 
+      – <strong>Carlos Palacín (Escaleno)</strong>: uno de nuestros miembros más fieles y que aplica 
+      la tecnología en el día a día de su empresa, por lo que aporta la experiencia con la tecnología 
+      en entornos reales de producción.
+  </p>
+  <p>
+    Todos ellos se comprometen y (así lo juraron en la última reunión) a guiar los pasos de los miembros de la Comunidad hasta llegar a la cima donde su ayuda ya no será necesaria.
+  </p>
+  <p>
+      Como ves este no es grupo de Meetup al uso donde se ofrecen charlas más o menos interesantes y
+      ya, aquí nos ensuciamos las manos y el hecho de que las reuniones sean de 4 horas da pie a poder
+      preparar <strong>workshops</strong> donde tod@s podemos ver y practicar con todo el ecosistema 
+      que engloba Angular.”
+  </p>    
+      
+      
+
+  <p>
+    Os esperamos,
+  </p>
+  <p>
+      <strong>Equipo ngLabs</strong>  
+  </p>
+</div>
