--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,9 @@
-.imagen {
-  width: 60px;
-  height: 60px;
-  padding: 10px;
+.logo {
+
+  display: flex;
+  margin: 0 auto;
+  /* text-align: center; */
+  justify-content: center;
 }
+
+
