--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
       <button type="button" class="btn btn-primary btn-block">SEE OUR WORK</button>
     </div>
     <div class="col-sm-4">
-      <p>Sobre Nosotros:</p>
+      <p>Sobre Nosotros:  <app-contact></app-contact></p>
       <p>Grupo de interés sobre AngularJS y Angular2 localizado en Madrid.</p>
     </div>
     <div class="col-sm-4">
