--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -7,7 +7,8 @@
       <li class="active"><a href="#">Home</a></li>
       <li><a href="#">Page 1</a></li>
       <li><a href="#">Page 2</a></li>
-      <li><a href="#">Page 3</a></li>
+      <li><a ngrouter>Page 2</a></li>
+      <li><a [routerLink]="[ '/contact-us' ]">Routing Test</a></li>
     </ul>
   </div>
 </nav>
