--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 <app-header></app-header>
 <app-menu></app-menu>
-<app-body></app-body>
+
+<router-outlet></router-outlet>
+
 <app-footer></app-footer>
 <app-contact></app-contact>
